Added secondary navigation bar with categories and apply styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
                 </div>
             </div>
 
-
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="">Tech</a></li>
+                    <li><a href="">Movies</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Books</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
