Added hero section with background image and gradient overlay

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="#">Home</a></li>|
+                        <li><a href="">About</a></li>|
+                        <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
                     </ul>
                 </div>
@@ -60,6 +60,20 @@
     </header>
 
     <!-- End here navbar  -->
+
+    <!-- hero section started form here  -->
+
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1>Breaking News: Major Event Unfolding</h1>
+            <p>Stay updated with the latest developments on this important story. Our team is on the ground bringing you
+                the
+                most accurate and timely updates.</p>
+            <a href="#">Read More</a>
+        </div>
+    </section>
+
+    <!-- hero section end here  -->
 
 </body>
 
