--- a/index.html
+++ b/index.html
@@ -75,6 +75,79 @@
 
     <!-- hero section end here  -->
 
+    <!-- started card and sidebar sections -->
+
+    <section class="section-container">
+        <div class="homepage-content">
+            <div class="homepage-Cards-container">
+                <div class="homepage-heading-details">
+                    <h1>From Around the World</h1>
+                    <a href="" class="more-link">More +</a>
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            alt="">
+                        <div class="homepage-Card">
+                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                obcaecati
+                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <a href="">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            alt="">
+                        <div class="homepage-Card">
+                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                obcaecati
+                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <a href="">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            alt="">
+                        <div class="homepage-Card">
+                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                obcaecati
+                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <a href="">Read more</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="homepage-Sidebar">
+                <div class="sidebar-section">
+                    <h2>Latest News</h2>
+                    <div>
+                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                            voluptatibus iure necessitatibus dicta.</a>
+                        <hr>
+                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                            voluptatibus iure necessitatibus dicta.</a>
+                        <hr>
+                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                            voluptatibus iure necessitatibus dicta.</a>
+                        <hr>
+                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                            voluptatibus iure necessitatibus dicta.</a>
+                    </div>
+                    <button>Load More +</button>
+                </div>
+                <div class="sidebar-section">
+                    <h2>Popular News</h2>
+
+                </div>
+    </section>
+
+
+    <!-- ended card and sidebar sections -->
+
 </body>
 
 </html>
