In the navbar changed a some links meanings

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     <li><a href="">world news</a></li>
                     <li><a href="">Sports</a></li>
                     <li><a href="">Tech</a></li>
-                    <li><a href="">Movies</a></li>
+                    <li><a href="">Entertainment</a></li>
                     <li><a href="">Business</a></li>
                     <li><a href="">Culture</a></li>
-                    <li><a href="">Books</a></li>
+                    <li><a href="">Education</a></li>
                 </ul>
             </div>
         </nav>
@@ -164,7 +164,9 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- second card container end -->
+
             </div>
             <div class="homepage-Sidebar">
                 <div class="sidebar-section">
