top-nav list added

--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -6,6 +6,23 @@
     <title>The News Reporter</title>
 </head>
 <body>
-    
+     <!-- started here navbar -->
+
+     <header>
+        <nav>
+            <div class="top-navbar">
+                <div>
+                    <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                </div>
+                <div>
+                    <ul class="top-nav-list">
+                        <li><a href="#">Home</a></li>|
+                        <li><a href="">About</a></li>|
+                        <li><a href="">Contact</a></li>|
+                        <li><a href="">Login</a></li>
+                    </ul>
+                </div>
+                <div>
 </body>
 </html>
