--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -51,6 +51,20 @@
                 </div>
             </div>
 
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
 </body>
 
 </html>
