--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -58,6 +58,58 @@
         </nav>
     </header>
 
+     
+    </div>
+    <div class="homepage-Sidebar">
+        <div class="sidebar-section">
+            <h2>Latest News</h2>
+            <div>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                    voluptatibus iure necessitatibus dicta.</a>
+                <hr>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                    voluptatibus iure necessitatibus dicta.</a>
+                <hr>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                    voluptatibus iure necessitatibus dicta.</a>
+                <hr>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                    voluptatibus iure necessitatibus dicta.</a>
+            </div>
+            <button>Load More +</button>
+        </div>
+        <div class="sidebar-section">
+            <h2>Popular News</h2>
+            <div>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                    voluptatibus iure necessitatibus dicta.</a>
+                <hr>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                    voluptatibus iure necessitatibus dicta.</a>
+                <hr>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                    voluptatibus iure necessitatibus dicta.</a>
+                <hr>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                    voluptatibus iure necessitatibus dicta.</a>
+            </div>
+            <button>Load More +</button>
+        </div>
+        <div class="newsletter-section">
+            <h2>Subscribe to our Newsletter</h2>
+            <form>
+                <input type="email" name="email" placeholder="Your email" required>
+                <input type="text" name="name" placeholder="Your name" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+    </div>
+</div>
+</section>
+
+
+<!-- ended card and sidebar sections -->
+
 </body>
 
 </html>
