--- a/pages/tech.html
+++ b/pages/tech.html
@@ -24,18 +24,18 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./images/facebook.png"
+                        <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png"
                                 alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./images/instagram.png"
+                        <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png"
                                 alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./images/telegram.png"
+                        <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png"
                                 alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./images/youtube.png"
+                        <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png"
                                 alt="youtube-icon"></a>
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
-                        <img src="./images/magnifying-glass.png" />
+                        <img src="../images/magnifying-glass.png" />
                     </div>
                 </div>
             </div>
