--- a/pages/tech.html
+++ b/pages/tech.html
@@ -64,13 +64,11 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                        <img src="../images/pixelwatch.jpeg"
                             alt="">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <h3>Pixel Watch 3 With Brighter Actua Display Launched in India .</h3>
+                            <p>Pixel Watch 3 company's third generation smartwatch launched in India on Tuesday promises 36 hours of battery life & available in two display size.</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
@@ -103,7 +101,6 @@
                 <div class="hompage-second-card-container">
                     <div class="homepage-heading-details">
                         <h1>latest articles</h1>
-                        <a href="" class="more-link">More +</a>
                     </div>
 
                     <div class="cards">
