--- a/pages/tech.html
+++ b/pages/tech.html
@@ -85,10 +85,8 @@
                         <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
                             alt="">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <h3>Vivo,Xiaomi leads as Indian smartphone market in 2024.</h3>
+                            <p>Vivo,Xiaomi & Samsung dominated Indian smartphone market,which reach 69 million units,marks a 7% year-over-year growth in the first half of 2024. </p>
                             <a href="">Read more</a>
                         </div>
                     </div>
