image of nws 3 added

--- a/pages/tech.html
+++ b/pages/tech.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                        <img src="../images/vivo.jpeg"
                             alt="">
                         <div class="homepage-Card">
                             <h3>Vivo,Xiaomi leads as Indian smartphone market in 2024.</h3>
