--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -19,7 +19,7 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
+                        <li><a href="../../index.html">Home</a></li>|
                         <li><a href="">About</a></li>|
                         <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
@@ -45,7 +45,7 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="">world news</a></li>
+                    <li><a href="../../index.html">world news</a></li>
                     <li><a href="">Sports</a></li>
                     <li><a href="">Tech</a></li>
                     <li><a href="">Entertainment</a></li>
@@ -58,6 +58,66 @@
     </header>
 
     <!-- End here navbar  -->
+      <!-- End here navbar  -->
+
+    <!-- hero section started form here  -->
+
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1>Breaking News: Major Event Unfolding</h1>
+            <p>Stay updated with the latest developments on this important story. Our team is on the ground bringing you
+                the
+                most accurate and timely updates.</p>
+            <a href="#">Read More</a>
+        </div>
+    </section>
     
+    <div class="homepage-Sidebar">
+    <div class="sidebar-section">
+        <h2>Latest News</h2>
+        <div>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                voluptatibus iure necessitatibus dicta.</a>
+            <hr>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                voluptatibus iure necessitatibus dicta.</a>
+            <hr>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                voluptatibus iure necessitatibus dicta.</a>
+            <hr>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                voluptatibus iure necessitatibus dicta.</a>
+        </div>
+        <button>Load More +</button>
+    </div>
+    <div class="sidebar-section">
+        <h2>Popular News</h2>
+        <div>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                voluptatibus iure necessitatibus dicta.</a>
+            <hr>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                voluptatibus iure necessitatibus dicta.</a>
+            <hr>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                voluptatibus iure necessitatibus dicta.</a>
+            <hr>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                voluptatibus iure necessitatibus dicta.</a>
+        </div>
+        <button>Load More +</button>
+    </div>
+    <div class="newsletter-section">
+        <h2>Subscribe to our Newsletter</h2>
+        <form>
+            <input type="email" name="email" placeholder="Your email" required>
+            <input type="text" name="name" placeholder="Your name" required>
+            <button type="submit">Subscribe</button>
+        </form>
+    </div>
+</div>
+</div>
+</section>
+
 </body>
 </html>
