added hero section in the about us page and styled it

--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -20,8 +20,8 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
+                        <li><a href="../index.html">Home</a></li>|
+                        <li>About</li>|
                         <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
                     </ul>
@@ -59,6 +59,20 @@
     </header>
 
     <!-- End here navbar  -->
+
+    <!-- hero section started form here  -->
+
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1>Welcome to the News Reporter
+                media company</h1>
+            <a href="../index.html"><button>Read More</button></a>
+        </div>
+    </section>
+
+    <!-- hero section end here  -->
+
+
 </body>
 
 </html>
