--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
+                        <li>Home</li>|
+                        <li><a href="./pages/aboutusPage.html">About</a></li>|
                         <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
                     </ul>
