in aboutpage added some cards to intoroduce this website

--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -72,6 +72,37 @@
 
     <!-- hero section end here  -->
 
+    <div class="about-content-cards">
+        <div class="about-content">
+            <h2>Core Values</h2>
+            <p>Integrity, Excellence, Transparency, and Dedication are the pillars of our company. We stand by these
+                values to
+                deliver the best content.</p>
+        </div>
+
+        <div class="about-content">
+            <h2>What We Do</h2>
+            <p>We cover a wide range of topics including World News, Sports, Technology, Entertainment, Business,
+                Culture, and
+                Education.</p>
+        </div>
+
+        <div class="about-content">
+            <h2>Testimonials</h2>
+            <p>The News Reporter is my go-to source for up-to-date and trustworthy news. Their reporting is
+                always on
+                point!</p>
+        </div>
+
+        <div class="about-content">
+            <h2>Awards & Recognition</h2>
+            <p>Over the years, we have been honored with numerous awards for our exceptional journalism and contribution
+                to the
+                media industry.</p>
+        </div>
+
+    </div>
+
     <!-- footer has been started from here -->
 
     <footer>
