--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -96,9 +96,9 @@
 
         <div class="about-content">
             <h2>Awards & Recognition</h2>
-            <p>Over the years, we have been honored with numerous awards for our exceptional journalism and contribution
-                to the
-                media industry.</p>
+            <p>We are committed to delivering exceptional journalism and making a significant contribution to the media
+                industry. </p>
+
         </div>
 
     </div>
