--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../CSS/culture.css">
+    <link rel="stylesheet" href="./../../CSS/culture/cultural_News.css">
     <title>Document</title>
 </head>
 
@@ -26,18 +26,18 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png"
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
                                 alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./../images/instagram.png"
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
                                 alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./../images/telegram.png"
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
                                 alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./../images/youtube.png"
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
                                 alt="youtube-icon"></a>
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
-                        <img src="./../images/magnifying-glass.png" />
+                        <img src="./../../images/magnifying-glass.png" />
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="./../images/cultural1.webp" alt="">
+                        <img src="./../../images/cultural1.webp" alt="">
                         <div class="homepage-Card">
                             <h3>Tarun Tahiliani defends Olympic uniforms criticism.</h3>
                             <p>Fashion designer Tarun Tahiliani has firmly defended the design of the Indian contingent's uniforms for the 2024 Paris Olympics, following widespread criticism. Despite social media backlash labelling the outfits as an "eyesore" and "mediocre," </p>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./../images/cultural2.webp" alt="">
+                        <img src="./../../images/cultural2.webp" alt="">
                         <div class="homepage-Card">
                             <h3>Pandit Tanmoy Bose honored with Sri Chinmoy Culture-Light Award</h3>
                             <p>The biggest wedding of the year is just around the corner, and we can't keep calm and their wedding festivities have already begun, grabbing all the headlines.  From exquisite custom-made outfits to glamorous six yards, she has rocked every look to perfection</p>
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./../images/cultural3.webp" alt="">
+                        <img src="./../../images/cultural3.webp" alt="">
                         <div class="homepage-Card">
                             <h3>Celebrating tradition: Nita Ambani stuns in a Kasavu sari on ..</h3>
                             <p>The biggest wedding of the year is just around the corner, and we can't keep calm. Anant Ambani and Radhika Merchant are all set to tie the knot on July 12, and their wedding festivities have already begun, grabbing all the headlines.</p>
@@ -99,7 +99,7 @@
 
                     <div class="cards">
                         <div class="card">
-                            <img src="./../images/cultural4.webp" alt="">
+                            <img src="./../../images/cultural4.webp" alt="">
                             <div class="homepage-Card">
                                 <h3>Knowing the early Mughals @ Humayun Museum in Delhi</h3>
                                 <p>As per reports, Union Culture Minister Gajendra Singh Shekhawat officially opened the museum, which showcases over 500 artefacts, many of which are on public display for the first time.</p>
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./../images/cultural5.jpg" alt="">
+                            <img src="./../../images/cultural5.jpg" alt="">
                             <div class="homepage-Card">
                                 <h3>Amaan and Ayaan Ali Bangash on Ustad Amjad Ali Khan teaching and philosophy are
                                     beyond music.
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./../images/cultural6.jpg" alt="">
+                            <img src="./../../images/cultural6.jpg" alt="">
                             <div class="homepage-Card">
                                 <h3>Meet 11-yr-old Rock goddess who floored Americas Got Talent.
                                     Americas Got Talent</h3>
