Implement Navbar responsive to all devices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="top-navbar">
-                <div>
+                <div class="main-sitename">
                     <h4>The</h4>
                     <h2><span class="heading-fisrt">News</span> Reporter</h2>
                 </div>
@@ -38,9 +38,12 @@
                         <a href="https://youtube.com" target="_blank"><img src="./images/youtube.png"
                                 alt="youtube-icon"></a>
                     </div>
-                    <div class="top-nav-search-bar">
-                        <input type="text" placeholder="Search news" />
-                        <img src="./images/magnifying-glass.png" />
+                    <div class="search-and-bar">
+                        <div class="top-nav-search-bar">
+                            <input type="text" placeholder="Search news" />
+                            <img src="./images/magnifying-glass.png" />
+                        </div>
+                        <img class="menu-bar-icon" src="./images/bar-icon.png" alt="tap to open menu">
                     </div>
                 </div>
             </div>
@@ -283,7 +286,7 @@
                 <h3>Links</h3>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="./pages/aboutusPage.html">About</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">Login</a></li>
                 </ul>
