--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -37,9 +37,12 @@
                         <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png"
                                 alt="youtube-icon"></a>
                     </div>
-                    <div class="top-nav-search-bar">
-                        <input type="text" placeholder="Search news" />
-                        <img src="../images/magnifying-glass.png" />
+                    <div class="search-and-bar">
+                        <div class="top-nav-search-bar">
+                            <input type="text" placeholder="Search news" />
+                            <img src="../images/magnifying-glass.png" />
+                        </div>
+                        <img class="menu-bar-icon" src="../images/bar-icon.png" alt="tap to open menu">
                     </div>
                 </div>
             </div>
