removed unwanted class name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="top-navbar">
-                <div class="main-sitename">
+                <div>
                     <h4>The</h4>
                     <h2><span class="heading-fisrt">News</span> Reporter</h2>
                 </div>
