--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/tech.css">
+    <link rel="stylesheet" href="../../CSS/tech.css">
 </head>
 <body>
     <header>
