content of news added

--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -24,13 +24,13 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png"
+                        <a href="http://facebook.com" target="_blank"><img src="../../images/facebook.png"
                                 alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png"
+                        <a href="https://instagram.com" target="_blank"><img src="../../images/instagram.png"
                                 alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png"
+                        <a href="https://web.telegram.org" target="_blank"><img src="../../images/telegram.png"
                                 alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png"
+                        <a href="https://youtube.com" target="_blank"><img src="../../images/youtube.png"
                                 alt="youtube-icon"></a>
                     </div>
                     <div class="top-nav-search-bar">
@@ -64,7 +64,7 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="../images/pixelwatch.jpeg"
+                        <img src="../../images/pixelwatch.jpeg"
                             alt="">
                         <div class="homepage-Card">
                             <h3>Pixel Watch 3 With Brighter Actua Display Launched in India .</h3>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="../images/pixel-9-pro-series_b46d56.webp"
+                        <img src="../../images/pixel-9-pro-series_b46d56.webp"
                             alt="">
                         <div class="homepage-Card">
                             <h3>Pixel 9 Pro and Pixel 9 Pro XL launched.</h3>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="../images/vivo.jpeg"
+                        <img src="../../images/vivo.jpeg"
                             alt="">
                         <div class="homepage-Card">
                             <h3>Vivo,Xiaomi leads as Indian smartphone market in 2024.</h3>
@@ -101,13 +101,11 @@
 
                     <div class="cards">
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="../../images/tech img 2.avif"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <h3>SpaceX’s mission to explore polar orbit first for spaceflight.</h3>
+                                <p>Elon Musk’s SpaceX has announced plans to launch the first-ever crewed mission to explore Earth’s polar orbit by the end of this year.</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
@@ -115,7 +113,7 @@
                             <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+                                <h3>Instagram features to let user keep friends update on their location.</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
                                     obcaecati
                                     voluptatem temporibus reprehenderit iure mollitia!</p>
