img of news 4 added

--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -110,13 +110,11 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="../../images/tech img 3.jpg"
                                 alt="">
                             <div class="homepage-Card">
                                 <h3>Instagram features to let user keep friends update on their location.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <p>Instagram is reportedly working on allowing users to share real-time updates with their friends on a map to get their locations.</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
